Fix footer icon alignment on CLIPBOARD pages

--- a/pages/clipboard/clipboard.css
+++ b/pages/clipboard/clipboard.css
@@ -1126,6 +1126,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0; /* Bootstrapのデフォルトパディングを除去 */
+  box-sizing: border-box; /* サイズ計算をborder-boxに統一 */
   width: 36px;
   height: 36px;
   color: #fff;
@@ -1256,6 +1258,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0; /* Bootstrapのデフォルトパディングを除去 */
+  box-sizing: border-box; /* サイズ計算をborder-boxに統一 */
   width: 36px;
   height: 36px;
   color: #fff;
